added -XX:MaxPermSize=128m surefire parameter, needed to avoid problems during test execution